Fix for overflow in hero section scene

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -29,7 +29,7 @@
 .scene {
     position: relative;
     padding: 3rem 0 6rem;
-    width: 100vw;
+    // width: 100vw;
 }
 
 .sun {
@@ -102,7 +102,6 @@
 
 
 }
-
 
 .next {
     height: 100vh;
