--- a/style.css
+++ b/style.css
@@ -6131,7 +6131,6 @@ header.scrolled {
 .scene {
   position: relative;
   padding: 3rem 0 6rem;
-  width: 100vw;
 }
 
 .sun {
